# aperion-state-gateway

./: .gitignore  CHANGELOG.md  Dockerfile  INTEGRATION_READINESS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release-test.yml  release.yml
aperion_cortex_client/: __init__.py  client.py
aperion_cortex_client/integration/: __init__.py  event_bridge.py
ref/: ASYNC_SYNC_FIX.md  CHROMADB_PRODUCTION.md  CONTEXT_ENGINEERING.md  EVENT_SOURCING.md  FASTAPI_BEST_PRACTICES.md  GAP_ANALYSIS.md  INTEGRATION_GUIDE.md  README.md  RESILIENCE_PATTERNS.md  ROADMAP.md  SQLITE_PRODUCTION.md
src/aperion_cortex/: __init__.py  main.py
src/aperion_cortex/memory/: __init__.py  context.py  hot_state.py  vector_store.py
src/aperion_cortex/persistence/: __init__.py  database.py  ledger.py
src/aperion_cortex/service/: __init__.py  app.py  auth.py  circuit_breaker.py  config.py  core.py  executor.py  logging.py  metrics.py  middleware.py  models.py  rate_limit.py  retry.py  router.py
tests/: conftest.py
tests/conformance/: test_api_contract.py
tests/integration/: test_aperion_compat.py  test_vector.py
tests/unit/: test_client_sdk.py  test_context.py  test_event_bridge.py
